fixed spacing on home

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -72,7 +72,7 @@
         font-family: monospace;
         font-size: 1.2rem;
         position: fixed;
-        top: 40%;
+        top: 45%;
         left: 5%;
         width: 70%;
         text-align: left;
